--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,24 +39,27 @@
         android:layout_width="match_parent">
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="click"
             android:text="통계" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="click"
             android:text="홈" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/planner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="click"
             android:text="플래너" />
     </LinearLayout>
 
