--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이번 주 총 공부량 -> 41:30:12"
-        android:textSize="24dp"
+        android:textSize="@dimen/default_font_size"
         android:layout_marginTop="50dp"/>
 
     <TextView
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이번 주 하루 평균 공부량 -> 05:55:44"
-        android:textSize="24dp"
+        android:textSize="@dimen/default_font_size"
         android:layout_marginTop="30dp"/>
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이번 달 총 공부량 -> 154:55:30"
-        android:textSize="24dp"
+        android:textSize="@dimen/default_font_size"
         android:layout_marginTop="30dp"/>
 
     <TextView
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이번 달 하루 평균 공부량 -> 04:59:51"
-        android:textSize="24dp"
+        android:textSize="@dimen/default_font_size"
         android:layout_marginTop="30dp"/>
 
     <LinearLayout
