--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -17,13 +17,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_size"
+            android:textSize="@dimen/default_font_size"
             android:text="월간 목표: "
             ></TextView>
         <EditText
             android:layout_width="@dimen/textview_width"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_size"
+            android:textSize="@dimen/default_font_size"
             android:text=""></EditText>
     </LinearLayout>
 
