--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="textview_height">25dp</dimen>
     <dimen name="textview_width">150dp</dimen>
     <dimen name="ball_radius">30dp</dimen>
-    <dimen name="font_size">20sp</dimen>
+    <dimen name="default_font_size">20sp</dimen>
+    <dimen name="large_font_size">50sp</dimen>
 </resources>
