--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.1" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/quotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10분뒤와 10년뒤를 동시에 생각하라."
