Planner Activity에서 Planner Note로 액티비티 변환될떄 인텐트 데이터값으로 년월일 String이나 데이터도 함께 전달하는 중이였음 - PlannerNote에서 파일입출력으로 해당파일이름을 해당 데이터로하기 위함.

--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -28,6 +28,7 @@
     </LinearLayout>
 
     <CalendarView
+        android:id="@+id/calendarView"
         app:layout_constraintTop_toBottomOf="@+id/daily_goal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
