--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="textview_height">25dp</dimen>
-    <dimen name="textview_width">150dp</dimen>
+    <dimen name="textview_width">170dp</dimen>
     <dimen name="ball_radius">30dp</dimen>
     <dimen name="default_font_size">20sp</dimen>
     <dimen name="large_font_size">50sp</dimen>
+    <dimen name="viewMarginLarge">50dp</dimen>
 </resources>
