--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,30 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <!-- 맨위 툴바 Timer, Start Btn   -->
     <androidx.appcompat.widget.Toolbar
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/timerToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey">
+        android:background="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TIMER"
             android:layout_gravity="center"
-            android:textSize="24dp"/>
+            android:text="TIMER"
+            android:textSize="@dimen/medium_font_size" />
 
         <Button
             android:id="@+id/startstopbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="START"
-            android:textSize="24dp"
-            android:textColor="@color/green"
             android:layout_gravity="end"
             android:layout_marginRight="15dp"
-            android:onClick="startStopTapped"/>
+            android:onClick="startStopTapped"
+            android:text="START"
+            android:textColor="@color/green"
+            android:textSize="@dimen/medium_font_size" />
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
@@ -37,20 +41,18 @@
         android:layout_height="wrap_content"
         android:text="00:00"
         android:textSize="@dimen/large_font_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintTop_toBottomOf="@+id/timerToolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
-        android:paddingHorizontal="@dimen/large_font_size"
-        app:layout_constraintTop_toBottomOf="@+id/timeText"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/large_font_size"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="@dimen/viewMarginLarge"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/large_font_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeText">
 
         <TextView
             android:id="@+id/quotes"
@@ -58,14 +60,15 @@
             android:layout_height="wrap_content"
             android:text="10분뒤와 10년뒤를 동시에 생각하라."
             android:textSize="@dimen/default_font_size"
-            />
+            android:layout_gravity="left"/>
 
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sooho_kang"
             android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:text="sooho_kang"
             android:textSize="@dimen/default_font_size" />
     </LinearLayout>
 
