--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,51 +16,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <TextView
+            android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="TIMER"
-            android:textSize="@dimen/medium_font_size" />
+            android:gravity="start"
+            android:text="00:00"
+            android:textSize="@dimen/large_font_size" />
 
         <Button
             android:id="@+id/startstopbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginRight="15dp"
             android:onClick="startStopTapped"
             android:text="START"
             android:textColor="@color/green"
-            android:textSize="@dimen/medium_font_size" />
+            android:textSize="@dimen/default_font_size" />
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/timeText"
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_marginTop="@dimen/viewMarginSmall"
+        android:id="@+id/listViewTodo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="00:00"
-        android:textSize="@dimen/large_font_size"
-        app:layout_constraintTop_toBottomOf="@+id/timerToolbar"
+        app:layout_constraintHeight_min="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/timerToolbar"
+        >
+    </ListView>
 
+    <!-- 명언-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/viewMarginLarge"
+        android:layout_marginTop="@dimen/viewMarginSmall"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/large_font_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeText">
+        app:layout_constraintTop_toBottomOf="@+id/listViewTodo">
 
         <TextView
             android:id="@+id/quotes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
             android:text="10분뒤와 10년뒤를 동시에 생각하라."
-            android:textSize="@dimen/default_font_size"
-            android:layout_gravity="left"/>
+            android:textSize="@dimen/default_font_size" />
 
         <TextView
             android:id="@+id/author"
