--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -6,6 +6,7 @@
 
 
     <LinearLayout
+        android:layout_marginTop="@dimen/viewMarginMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -33,8 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></CalendarView>
+        app:layout_constraintStart_toStartOf="parent"
+        ></CalendarView>
     <LinearLayout
+        android:layout_marginBottom="@dimen/viewMarginMedium"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
