--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="medium_font_size">30sp</dimen>
     <dimen name="large_font_size">50sp</dimen>
     <dimen name="viewMarginLarge">50dp</dimen>
+    <dimen name="viewMarginMedium">30dp</dimen>
+    <dimen name="viewMarginSmall">20dp</dimen>
 </resources>
