--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -26,6 +26,7 @@
 
         <Button
             android:id="@+id/back"
+            android:onClick="back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="뒤로가기" />
