주석이랑 파랑이

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/colorAccent">
 
 
         <TextView
@@ -26,6 +27,7 @@
             android:text="00:00"
             android:textSize="@dimen/large_font_size"
             android:gravity="center_horizontal"
+            android:textColor="@color/white"
             tools:layout_editor_absoluteX="16dp" />
 
         //메인버튼 삭제
