--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorAccent">#40C4FF</color>
     <color name="red">#8B0000</color>
     <color name="green">#006400</color>
     <color name="grey">#D7D7D7</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
