--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,51 +6,91 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_marginTop="@dimen/viewMarginLarge"
         android:id="@+id/linearToDoName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="@dimen/viewMarginLarge"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:text="할일: "
+            android:textSize="@dimen/default_font_size"></TextView>
 
         <EditText
             android:id="@+id/editTextTextPersonName"
-            android:layout_width="@dimen/textview_width"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="할일 입력하세요."
             android:inputType="text"
-            />
+            android:text=""
+            android:maxLength="10"
+            android:textSize="@dimen/small_font_size" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="      "></TextView>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"></View>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="@dimen/viewMarginLarge"
         android:id="@+id/linearEstimatedTime"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="@dimen/viewMarginLarge"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/linearToDoName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linearToDoName">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:text="시간:"
+            android:textSize="@dimen/default_font_size"></TextView>
 
         <EditText
             android:id="@+id/editTextEstimatedTime"
-            android:layout_width="@dimen/textview_width"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="예상 시간 입력하세요."
+            android:layout_weight="1"
             android:inputType="number"
-            />
+            android:maxLength="2"
+            android:text=""
+            android:textSize="@dimen/small_font_size" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="시간"></TextView>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"></View>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="@dimen/viewMarginLarge"
         android:id="@+id/linearImportance"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="@dimen/viewMarginLarge"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,10 +100,10 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/viewMarginLarge"
-            android:text="중요도"
             android:layout_gravity="center_horizontal"
-            android:textSize="30sp"/>
+            android:layout_marginTop="@dimen/viewMarginLarge"
+            android:text="중요도: "
+            android:textSize="@dimen/default_font_size" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
