--- a/app/src/main/res/layout/main_listview.xml
+++ b/app/src/main/res/layout/main_listview.xml
@@ -2,34 +2,23 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="10sp">
+    android:layout_height="match_parent">
 
-    <!-- 맨위 툴바 Timer, Start Btn   -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/timerToolbar"
+    <Button
+        android:id="@+id/startstopbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/startstopbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginRight="@dimen/viewMarginSmall"
-            android:onClick="startStopTapped"
-            android:text="START"
-            android:textColor="@color/green"
-            android:textSize="@dimen/default_font_size" />
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_gravity="end"
+        android:layout_marginHorizontal="@dimen/viewMarginSmall"
+        android:onClick="startStopTapped"
+        android:text="START"
+        android:textColor="@color/green"
+        android:textSize="@dimen/small_font_size" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -43,7 +32,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="할일:"
-                android:textSize="@dimen/default_font_size" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold"
+                />
 
             <TextView
                 android:id="@+id/todo"
@@ -51,7 +43,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="~"
-                android:textSize="@dimen/default_font_size" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="@dimen/small_font_size" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="3.8"></View>
+
         </LinearLayout>
 
         <LinearLayout
@@ -65,7 +65,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="시간:"
-                android:textSize="@dimen/default_font_size" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/time"
@@ -73,7 +75,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="~"
-                android:textSize="@dimen/default_font_size" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="@dimen/small_font_size" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -81,15 +85,19 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="중요도:"
-                android:textSize="@dimen/default_font_size" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/small_font_size"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/importance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
                 android:text="~"
-                android:textSize="@dimen/default_font_size" />
+                android:textSize="@dimen/small_font_size" />
         </LinearLayout>
     </LinearLayout>
 
