--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorPrimary">#40C4FF</color>
+    <color name="colorPrimaryDark">#4066ff</color>
     <color name="colorAccent">#40C4FF</color>
     <color name="red">#8B0000</color>
     <color name="green">#006400</color>
