--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -68,26 +68,40 @@
 
         <Button
             android:id="@+id/status"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="click"
-            android:text="통계" />
+            android:text="통계"
+            android:textColor="@color/white"
+            android:textSize="@dimen/small_font_size"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/home"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="click"
-            android:text="홈" />
+            android:text="홈"
+            android:textColor="@color/white"
+
+            android:textSize="@dimen/small_font_size"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/planner"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="click"
-            android:text="플래너" />
+            android:text="플래너"
+
+            android:textColor="@color/white"
+            android:textSize="@dimen/small_font_size"
+            android:textStyle="bold" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
